--- a/src/app/admin/admin-course/admin-course.component.html
+++ b/src/app/admin/admin-course/admin-course.component.html
@@ -1,8 +1,8 @@
 <app-admin-sidebar></app-admin-sidebar>
 <div class="course-container">
   <div class="top-right-section">
-     <!-- Search Bar -->
-     <div class="search-bar">
+    <!-- Search Bar -->
+    <div class="search-bar">
       <input type="text" placeholder="Search" class="search-input" [(ngModel)]="searchQuery" (keyup)="onSearch()" />
     </div>
     <div class="profile-section">
@@ -10,8 +10,8 @@
         <img src="assets/teacher1.jpg" alt="Admin Profile" class="profile-img" />
       </div>
       <div class="profile-info">
-        <p class="admin-name">Admin Name</p>
-        <p class="admin-email">admin@example.com</p>
+        <p class="admin-name">{{ userDetails.username }}</p>
+        <p class="admin-email">admin</p>
       </div>
     </div>
     <img src="assets/adminhome/notif.png" alt="Notification" class="notif-image" />
@@ -27,6 +27,15 @@
         <label for="courseName">Course Name</label>
         <input type="text" id="courseName" name="courseName" [(ngModel)]="courseName" placeholder="Enter course name" required />
       </div>
+      
+      <!-- Classroom selection (for adding/updating courses) -->
+      <div class="form-group">
+        <label for="classrooms">Select Classrooms</label>
+        <select id="classrooms" name="classrooms" [(ngModel)]="selectedClassrooms" multiple>
+          <option *ngFor="let classroom of classrooms" [value]="classroom.id">{{ classroom.name }}</option>
+        </select>
+      </div>
+
       <button class="add-course-btn" type="button" (click)="courseToUpdate ? updateCourse() : addCourse()">
         <img src="assets/icons/Add.png" alt="{{ courseToUpdate ? 'Update' : 'Add' }} Course" width="20" height="20" />
         {{ courseToUpdate ? 'Update Course' : 'Add Course' }}
@@ -40,6 +49,7 @@
       <tr>
         <th>#</th>
         <th>Course Name</th>
+        <!--<th>Classroom IDs</th> <!-- New column for classroom IDs -->
         <th>Actions</th>
       </tr>
     </thead>
@@ -47,6 +57,14 @@
       <tr *ngFor="let course of courses; let i = index">
         <td>{{ i + 1 }}</td>
         <td>{{ course.name }}</td>
+        <!--<td>
+          <!-- Display classroom IDs associated with each course
+          <span *ngFor="let classroomId of course.classroomIds; let last = last">
+            {{ course.classroomId }}<span *ngIf="!last">, </span>
+          </span>
+
+        </td>
+         -->
         <td>
           <button class="action-btn" (click)="openUpdateForm(course)">
             <img src="assets/icons/Button_Edit.png" alt="Update" width="80" height="30" />
