--- a/src/app/admin/admin-establishments/admin-establishments.component.html
+++ b/src/app/admin/admin-establishments/admin-establishments.component.html
@@ -14,8 +14,8 @@
         <img src="assets/teacher1.jpg" alt="Admin Profile" class="profile-img" />
       </div>
       <div class="profile-info">
-        <p class="admin-name">Admin Name</p>
-        <p class="admin-email">admin@example.com</p>
+        <p class="admin-name">{{ userDetails.username }}</p>
+        <p class="admin-email">admin</p>
       </div>
     </div>
 
