--- a/src/app/admin/admin-classrooms/admin-classrooms.component.html
+++ b/src/app/admin/admin-classrooms/admin-classrooms.component.html
@@ -13,10 +13,10 @@
                 <img src="assets/teacher1.jpg" alt="Admin Profile" class="profile-img" />
             </div>
             <div class="profile-info">
-                <p class="admin-name">Admin Name</p>
-                <p class="admin-email">admin@example.com</p>
+                <p class="admin-name">{{ userDetails.username }}</p>
+                <p class="admin-email">admin</p>
             </div>
-        </div>
+            </div>
 
         <img src="assets/adminhome/notif.png" alt="Notification" class="notif-image" />
     </div>
