--- a/src/app/admin/admin-students/admin-students.component.html
+++ b/src/app/admin/admin-students/admin-students.component.html
@@ -11,9 +11,10 @@
             <img src="assets/teacher1.jpg" alt="Admin Profile" class="profile-img" />
         </div>
         <div class="profile-info">
-            <p class="admin-name">Admin Name</p>
-            <p class="admin-email">admin@example.com</p>
+            <p class="admin-name">{{ userDetails.username }}</p>
+            <p class="admin-email">admin</p>
         </div>
+        
     </div>
 
     <!-- Notification Icon -->
@@ -60,7 +61,7 @@
             <tr>
                 <!--<th><span>#</span></th>-->
                 <th><span>Student Name</span></th>
-                <th><span>Class</span></th>
+              <!--  <th><span>Class</span></th>-->
               <!-- <th><span>Actions</span></th>--> 
             </tr>
         </thead>
@@ -68,7 +69,7 @@
             <tr *ngFor="let student of students">
                 <!--<td>{{ student.id }}</td>-->
                 <td>{{ student.name || 'No name' }}</td> <!-- Display student name -->
-                <td>{{ student.class ? student.class.name : 'No class' }}</td> <!-- Display class name -->
+         <!--     <td>{{ student.class ? student.class.name : 'No class' }}</td> <!-- Display class name -->
                 <!-- <td>
                     Update button
                     <button class="action-btn">
